force-app/main/default/objects/Job_Application__c/fields/Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Notes__c</fullName>
    <description>General notes on the job application</description>
    <inlineHelpText>Notes related to the job application</inlineHelpText>
    <label>Application Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>