force-app/main/default/objects/Job_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The Status of the Job Application</description>
    <inlineHelpText>The Status of the Job Application</inlineHelpText>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
                <default>true</default>
                <label>Saved</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Applying</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>No Offer</fullName>
            </value>
            <value>
                <fullName>Auto Close - Stale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>