force-app/main/default/objects/Job_Application__c/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <description>The date the job application was submitted.</description>
    <inlineHelpText>The date the job application was submitted.</inlineHelpText>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>