force-app/main/default/objects/Job_Application__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Company (Account) that the job is at.</description>
    <inlineHelpText>The Company that the Job is at.</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>