force-app/main/default/objects/Job_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Information about the job, such as responsibilities, qualifications and benefits.</description>
    <inlineHelpText>Information about the job, such as responsibilities, qualifications and benefits.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>