force-app/main/default/objects/Job_Application__c/fields/Estimated_Annual_Social_Security_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Social_Security_Tax__c</fullName>
    <description>Estimated Social Security tax that will be paid at the job. Calculated using the salary on the job and the Social Security tax rates that are stored in Custom Metadata.</description>
    <inlineHelpText>Based on the salary of the job, this is the estimated Social Security tax that will be paid.</inlineHelpText>
    <label>Estimated Annual Social Security Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>