force-app/main/default/objects/Job_Application__c/fields/Estimated_Monthly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Take_Home_Pay__c</fullName>
    <description>The estimated monthly take-home pay for the User that saved the job after Federal, Social Security and Medicare taxes are deducted.</description>
    <inlineHelpText>The estimated monthly take-home pay for the person that saved the job after Federal, Social Security and Medicare taxes have been deducted.</inlineHelpText>
    <label>Estimated Monthly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>