force-app/main/default/objects/Job_Application__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>The date that the applicant should next follow-up on the job</description>
    <inlineHelpText>The date that the applicant should next follow-up on the job</inlineHelpText>
    <label>Follow-Up Date</label>
    <type>Date</type>
</CustomField>