force-app/main/default/objects/Job_Application__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <description>Location of the Job on the application.</description>
    <inlineHelpText>The location of the Job.</inlineHelpText>
    <label>Job Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>