force-app/main/default/objects/Job_Application__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <description>The link to the  Job Posting.</description>
    <inlineHelpText>A link that can be clicked to see the full job posting on an external website.</inlineHelpText>
    <label>Job Posting</label>
    <type>Url</type>
</CustomField>