force-app/main/default/objects/Job_Application__c/fields/Job_Posting_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Id__c</fullName>
    <description>The Id of the Job Posting from the external website</description>
    <externalId>true</externalId>
    <inlineHelpText>The Id of the job posting listed on the external website</inlineHelpText>
    <label>Job Posting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>