force-app/main/default/objects/Job_Application__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Title of the Job</description>
    <inlineHelpText>Title of the Job the application is for</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>