force-app/main/default/objects/Job_Application__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>The type of Job specified in the list (e.g. full-time, part-time, temporary).</description>
    <inlineHelpText>The type of Job specified in the list (e.g. full-time, part-time, temporary).</inlineHelpText>
    <label>Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>