force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>User provided rating on the attractiveness of the job. Uses a global value set that rates on a scale of 1-5 stars.</description>
    <inlineHelpText>How attractive the job is as rated by the person who saved it.</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Star_Rating</valueSetName>
    </valueSet>
</CustomField>