force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Salaries from job postings are received as a String and can sometimes be ranges with non numeric characters (e.g. $100 - $150k). The original string received from the posting will be stored in Salary_From_Job_Board__c. Code will then take that value and convert it into a single salary that can be stored in this field.</description>
    <inlineHelpText>The salary from the job posting. If the job posting listed a range, this will be the midpoint in the range.</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>