force-app/main/default/objects/Job_Application__c/fields/Salary_From_Job_Board__c.field-meta.xml
<CustomField>
    <fullName>Salary_From_Job_Board__c</fullName>
    <description>The salary pulled in from a third-party job board. Since Jooble salaries are stored as a String, this field will hold whatever value is in their data.</description>
    <inlineHelpText>The salary listed on the website that lists the job.</inlineHelpText>
    <label>Salary From Job Board</label>
    <length>255</length>
    <type>Text</type>
</CustomField>